# kite-server

./: .gitignore  .gitmodules  Cargo.toml  README.md  TODO.md  build-push.sh  build.rs  hotpot.toml  hotpot.toml.example  kite.example.toml  kite.toml  kite.toml.example  kite3.service  rustfmt.toml  volo.yml  开发计划.md
.github/workflows/: build-push.yml  build.yml  check.yml  rust.yml
balance-updater/: Cargo.toml
balance-updater/src/: cache.rs  lib.rs  pull.rs  vaccum.rs
cache/: Cargo.toml
cache-macro/: Cargo.toml
cache-macro/src/: lib.rs
cache/src/: lib.rs
captcha/: Cargo.toml
captcha/src/: lib.rs
deploy/: ip-whitelist.txt  kite.service
docs/: 数据库配置.md  新生数据导入说明.md  账户系统设计.md  通信协议.md  错误代码.md  错误处理.md
docs/APIv1/: 二手交易.md  入学查询.md  天气模块  接口设计约定.md  搜索.md  晚安计划.md  格言.md  活动与签到.md  消费查询.md  用户模块.md  用户相关.md  登录相关.md  课程查询与管理.md  返校码.md  通知.md  通讯录.md  闲置交易.md  附件操作.md
docs/APIv2/: 入学查询.md  图书馆预约.md  墙.md  小游戏.md  时刻.md  用户.md  闲置交易.md  集五福.md
http-test/: game.http  http-client.env.json  library.http  user.http  集五福.http
kite/: Cargo.toml
kite/src/: cache.rs  config.rs  db.rs  lib.rs  model.rs  service.rs
kite/src/model/: balance.rs  user.rs
loader/: Cargo.toml
loader/src/: main.rs
migrations/2020-03-16-135730_persons/: up.sql
migrations/2020-03-16-135732_verifications/: down.sql  up.sql
migrations/2020-03-18-021207_oa_bindings/: down.sql  up.sql
service-v2/: Cargo.toml
service-v2/src/: captcha.rs  electricity.rs  error.rs  lib.rs  response.rs
service-v3/: Cargo.toml  build.rs
service-v3/src/: authserver.rs  error.rs  lib.rs  model.rs  proxy.rs  service.rs
service-v3/src/authserver/: client.rs  portal.rs  tls.rs
service-v3/src/model/: badge.rs  balance.rs  board.rs  classroom_browser.rs  template.rs  user.rs
service-v3/src/proxy/: connector.rs  stream.rs  tls.rs
service-v3/src/service/: auth.rs  badge.rs  balance.rs  board.rs  captcha.rs  classroom_browser.rs  gen.rs  login.rs  ping.rs  template.rs  user.rs
service-v3/src/service/login/: tls.rs
service-v3/src/service/user/: authserver.rs
sql/: initial.sql
src/: attachment.rs  bridge.rs  cache.rs  config.rs  error.rs  freshman.rs  ipset.rs  jwt.rs  lib.rs  main.rs  model.rs  models.rs  portal.rs  response.rs  schema.rs  server.rs  service.rs  services.rs  sign.rs  task.rs  user.rs  wechat.rs
src/bridge/: host.rs  model.rs  protocol.rs
src/error/: mod.rs  server.rs  sign.rs  user.rs
src/middleware/: logger.rs
src/model/: badge.rs  balance.rs  board.rs  classroom.rs  contact.rs  electricity.rs  exception.rs  freshman.rs  game.rs  library.rs  notice.rs  report.rs  template.rs  user.rs  weather.rs
src/model/freshman/: familiar.rs  myself.rs
src/models/: attachment.rs  checking.rs  contact.rs  edu.rs  event.rs  file.rs  freshman.rs  mall.rs  motto.rs  notice.rs  pay.rs  sc.rs  search.rs  sign.rs  telephone.rs  user.rs  weather.rs  wechat.rs
src/models/edu/: class.rs  classroom.rs  course.rs  major.rs  score.rs  second_course.rs  timetable.rs
src/models/file/: attachment.rs  avatar.rs
src/models/freshman/: delivery.rs  familiar.rs  myself.rs
src/models/mall/: comments.rs  favorite.rs  goods.rs  sort.rs  textbook.rs  views.rs  wish.rs
src/models/pay/: electricity.rs  expense.rs
src/models/user/: authserver.rs  identity.rs  person.rs  wechat.rs
src/sale/: mod.rs
src/server/: acl.rs  acl_middleware.rs  auth.rs  db.rs  error.rs  handlers.rs  jwt.rs  middlewares.rs  mod.rs  sign.rs  user.rs  user_service.rs
src/server/handlers/: attachment.rs  freshman.rs  motto.rs  sign.rs  user.rs
src/server/middlewares/: acl.rs  auth.rs  mod.rs
src/service/: auth.rs  badge.rs  balance.rs  board.rs  classroom.rs  contact.rs  edu.rs  electricity.rs  exception.rs  freshman.rs  game.rs  gen.rs  jwt.rs  library.rs  notice.rs  ping.rs  report.rs  user.rs  weather.rs
src/services/: auth.rs  handlers.rs  middlewares.rs  response.rs
src/services/handlers/: attachment.rs  checking.rs  contact.rs  edu.rs  event.rs  freshman.rs  library.rs  mall.rs  motto.rs  notice.rs  pay.rs  search.rs  sign.rs  status.rs  telephone.rs  user.rs  weather.rs
src/services/middlewares/: acl.rs  reject.rs
src/sign/: event.rs  schema.rs
src/task/: error.rs  host.rs  model.rs  protocol.rs
src/user/: actions.rs  error.rs  manager.rs  mod.rs  models.rs  schema.rs  wechat.rs
src/util/: deserialization.rs  mod.rs
volo-gen/: volo.yml
volo-gen/src/: lib.rs
