[package]
name = "kite-server"
version = "3.0.0-beta"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
prost = "0.11.6"
prost-types = "0.11.6"
tonic = "0.8.3"
sqlx = { version = "0.6", default-features = false, features = ["runtime-tokio-rustls", "uuid", "chrono", "json", "postgres", "macros"] }
jsonwebtoken = "8.2"

once_cell = "1.17"
serde = { version = "1", features = ["derive"] }
toml = "0.5"

chrono = { version = "0.4.23", features = ["serde"] }
num-traits = "0.2"
num-derive = "0.3"

[build-dependencies]
tonic-build = "0.8"

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
