[package]
name = "balance-updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kite = { path = "../kite" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4.23", features = ["serde"] }

async-trait = "0.1.61"
tokio = { version = "*", features = ["time"] }
sqlx = { version = "0.6", default-features = false, features = ["runtime-tokio-rustls", "chrono", "postgres", "macros"] }
reqwest = { version = "*", features = ["json"] }

tracing = "0.1"
once_cell = "1.17"