[package]
name = "cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
once_cell = "1.17"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4.23", features = ["serde"] }
sled = "0.34"
bincode = "2.0.0-rc.2"
tracing = "0.1"