[package]
name = "captcha"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
d4ocr-rust = { path = "../d4ocr-rust" }

image = "0.24.1"
anyhow = "1"
once_cell = "1.17"
tokio = { version = "*", features = ["rt-multi-thread", "sync"] }