[package]
name = "kite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.61"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

anyhow = "1.0.68"
once_cell = "1.17"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4.23", features = ["serde"] }
toml = "0.5"
sled = "0.34"

bincode = "2.0.0-rc.2"