[package]
name = "kite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cache = { path = "../cache" }
cache-macro = { path = "../cache-macro" }

# Asynchronous
async-trait = "0.1.61"
tokio = { version = "1", features = ["full"] }

# Util, logging
anyhow = "1.0.68"
once_cell = "1.17"
tracing = "0.1.37"
regex = "1.7.1"
regex-macro = "0.2.0"

# Serialization and deserialization
serde = { version = "1", features = ["derive"] }
num-traits = "0.2"
num-derive = "0.3"

# Format & Types
chrono = { version = "0.4.23", features = ["serde"] }
uuid = { version = "1.2", features = ["serde", "v4"] }
toml = "0.5"
bincode = "2.0.0-rc.2"

# SQL
sqlx = { version = "0.6", default-features = false, features = ["runtime-tokio-rustls", "uuid", "chrono", "json", "postgres", "macros"] }
