[package]
name = "service-v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kite = { path = "../kite" }
captcha = { path = "../captcha" }

anyhow = "1.0"
async-trait = "0.1"
serde_json = "1.0"
chrono = { version = "0.4.23", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
base64 = "0.13"
tracing = "0.1"

poem = "1.3"
sqlx = { version = "0.6", default-features = false, features = ["runtime-tokio-rustls", "chrono", "postgres", "macros"] }