[package]
name = "service-v3"
version = "0.1.0"
edition = "2021"

[dependencies]
kite = { path = "../kite" }
kite-rustls = { path = "../kite-rustls" }

anyhow = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.23.4"
tokio-stream = "0.1.11"
webpki-roots = "0.22.6"
hyper = { version = "1.0.0-rc.2", default-features = false, features = ["http1", "client"] }
rustls = "0.20.8"
hyper-rustls = "0.23"
tracing = "0.1"
tracing-subscriber = "0.3"
prost = "0.11.6"
prost-types = "0.11.6"
tonic = "0.8.3"
tonic-reflection = "0.6"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.3", features = ["trace"] }
http = "0.2"
sqlx = { version = "0.6", default-features = false, features = ["runtime-tokio-rustls", "uuid", "chrono", "json", "postgres", "macros"] }
jsonwebtoken = "8.2"
bincode = { version = "2.0.0-rc.2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1.2", features = ["serde", "v4"] }
chrono = { version = "0.4.23", features = ["serde"] }
num-traits = "0.2"
num-derive = "0.3"


[build-dependencies]
tonic-build = "0.8"