[package]
name = "service-v3"
version = "0.1.0"
edition = "2021"

[dependencies]
kite = { path = "../kite" }
captcha = { path = "../captcha" }

anyhow = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.23.4"
tokio-stream = "0.1.11"
webpki-roots = "0.22.6"
hyper = { version = "0.14.23", default-features = false, features = ["http1", "client"] }
rustls = "0.20.8"
tracing = "0.1"
prost = "0.11.6"
tonic = "0.8.3"
tonic-reflection = "0.6"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.3", features = ["trace"] }
http = "0.2"
sqlx = { version = "0.6", default-features = false, features = ["runtime-tokio-rustls", "uuid", "chrono", "json", "postgres", "macros"] }
jsonwebtoken = "8.2"
bincode = { version = "2.0.0-rc.2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4.23", features = ["serde"] }
num-traits = "0.2"
num-derive = "0.3"
once_cell = "1.17.0"
scraper = "0.14.0"
base64 = "0.21.0"
block-modes = "0.7"
aes = "0.6"
bytes = "1.3.0"
percent-encoding = "2.2.0"
prost-types = "0.11.6"
regex = "1.7.1"
regex-macro = "0.2.0"

[build-dependencies]
tonic-build = "0.8"
